<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_variant"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/backIbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/description_back"
            android:src="@mipmap/sback" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:drawableStart="@mipmap/ifemes8"
            android:gravity="center"
            android:text="@string/string_order_parse"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/receiveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_btn"
                android:text="@string/btn_receive"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/dataBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_btn"
                android:text="@string/btn_receive_data"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_btn"
                android:text="@string/btn_send"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/cleanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_btn"
                android:text="@string/btn_clean"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/string_out_area"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/msgTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="ifContentScrolls"
                android:padding="5dp"
                android:textColor="@color/design_default_color_secondary"
                android:textSize="18sp"
                tools:text="fadfadf asdfasdfa" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>